--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "git+https://github.com/Marlys26/BOG003-md-links.git"
   },
+  "bin": {
+    "mdlinks": "cli.js"
+},
   "keywords": [
     "mdlinks"
   ],
@@ -26,6 +29,7 @@
     "axios": "^0.23.0",
     "filehound": "^1.17.5",
     "marked": "^3.0.7",
-    "node-fetch": "2.6.5"
+    "node-fetch": "2.6.5",
+    "yargs": "^17.2.1"
   }
 }
